# fireworks

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  capacitor.config.json  package-lock.json  package.json  patch.py  patch2.py  serve_apk.sh
.claude/: .gitignore
.claude/commands/: review-pr.md
.claude/pr-rules/: common.md
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  particle_engine.cpp  particle_engine.h  particle_step.cpp  particle_step.h
android/app/src/main/cpp/test/: test_particle_step.cpp
android/app/src/main/java/com/alfie/anniversary/: CLAUDE.md  MainActivity.java  ParticleEngine.java  README.md  SensorBridgePlugin.java
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
docs/: implementation_plan.md  ndk-porting-plan.md  task1.md  tasks.md  walkthrough.md
public/: CLAUDE.md  README.md  debug.html  index.html
public/boids-app/: README.md  index.html  style.css
public/boids-app/js/: boid.js  main.js  opt.js  util.js
public/js/: audio.js  fireworks.js  geo.js  scene.js  sensors.js  session-recorder.js
